...
        }
    var body: some View {
        VStack(alignment: .center) {
            Image(uiImage: UIImage(imageLiteralResourceName: "AppIcon"))
                .resizable(resizingMode: .stretch)
                .frame(width: 100.0, height: 100.0)
                .accessibilityIdentifier("iconImage")
                .padding(/*@START_MENU_TOKEN@*/.all, 30.0/*@END_MENU_TOKEN@*/)
            List {
                Text("\(versionText): \(Bundle.main.appVersionShort!)")
                Text("""
                    \(teamText)
                    Liming Yang
                    Peiyang Wang
                    Rouwen Mao
                    Yukuan Hao
                    """).accessibilityIdentifier("teamInfo")
                Text("\(mailText): info.libbris.com")
            }
        }.navigationBarBackButtonHidden(true)
        .navigationBarTitleDisplayMode(.inline)
        .navigationBarItems(leading: btnBack)
        .onReceive(NotificationCenter.default.publisher(for: NSNotification.Name("switchLanguage")), perform: { _ in
...
