...
    @State var books:[BookInfoBriefWithTime] = [BookInfoBriefWithTime]()
    //@StateObject public var datas: DownloadJson
    @StateObject public var localJsonFile: localJsonFileManager = localJsonFileManager.shared
    var body: some View {
        NavigationView{
        ZStack{
            Image("wall").resizable(resizingMode: .stretch).edgesIgnoringSafeArea(/*@START_MENU_TOKEN@*/.all/*@END_MENU_TOKEN@*/).onAppear(perform: {
                localJsonFile.readData()
                DispatchQueue.global(qos: .background).async {
                while(localJsonFile.state == .loading){
                    //sleep(1)
                }
                if localJsonFile.state == .success{
...
                        }
                    }
                }.accessibilityIdentifier("HomePageScrollView")
            }
        }
        .navigationBarTitleDisplayMode(.inline)
        .navigationBarItems(leading:Image("logo_libbris_white").imageScale(.large))
        .navigationViewStyle(StackNavigationViewStyle())
            
        }
    }
}

...
