/* 
  Localizable.strings
  Libbris

  Created by 郝育宽 on 2021-08-23.
  
*/
"Skip" = "Skip";
"ON READING" = "ON READING";
"TO READ" = "TO READ";
"Language Setting" = "Language Setting";
"Information" = "Information";
"Configuration" = "Configuration";
"Team" = "Team";
"mail" = "mail";
"Version" = "Version";
"English" ="English";
"Chinese(Simplified)" = "Chinese(Simplified)";
"French" = "French";
"<Back" = "<Back";
"RECOMMEND" = "RECOMMEND";
"HOT" = "HOT";
"NEW" = "NEW";
"MORE" = "MORE";
"LIBRARY" = "LIBRARY";
"SETTINGS" = "SETTINGS";
"Search" = "Search";
"No more books" = "No more books";
"Submit" = "Submit";
"search area" = "search area";
"Application Setting" = "Application Setting";
"Privacy & Safety" = "Privacy & Safety";
"Other" = "Other";
"Loading..." = "Loading...";
"clearData" = "clearData";
"Add to bookshelf" = "Add to bookshelf";
"Show Catalog" = "Dispaly Catalog";
"Your bookshelf is empty" = "Your bookshelf is empty";
