...
                } else {
                    localJsonFile.bookShelfBook += [tempData]
                }
                localJsonFile.sortArray()
                localJsonFile.saveData(data: localJsonFile.encodeData(data: localJsonFile.bookShelfBook))
                NotificationCenter.default.post(name: .refreshBook, object: nil)
            }.accessibilityIdentifier("LongPressMenu")
        })
    }
    private func selectImage() -> Image {
        switch loader.state {
        case .loading:
            return loading
...
